Header navbar done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/style.css" />
-    <title>Document</title>
+    <title>Abdul Wahed Nur</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header section start  -->
+    <header>
+      <!-- Header menu start  -->
+      <nav>
+        <div class="nav container">
+          <a href="index.html">A. Wahed</a>
+          <a href="#" class="btn-outline"> Download Resume </a>
+        </div>
+      </nav>
+      <!-- Header menu end  -->
+    </header>
+    <!-- Header section end  -->
+  </body>
 </html>
