header section done

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
           <a href="#" class="btn-outline"> Download Resume </a>
         </div>
       </nav>
+      <section class="slider">
+        <div class="content">
+          <img src="/assets/img/user.svg" alt="" />
+          <h1 class="title">
+            "In the near future, I hope to become a Developer."
+          </h1>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+          <a href="#support" class="btn">Contact with me</a>
+        </div>
+      </section>
       <!-- Header menu end  -->
     </header>
     <!-- Header section end  -->
