section title css added

--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
       <!-- Header menu end  -->
     </header>
     <!-- Header section end  -->
+    <!-- Why Web Development section start  -->
+    <section class="why">
+      <div class="container">
+        <div></div>
+      </div>
+    </section>
+    <!-- Why Web Development section end   -->
   </body>
 </html>
