Why Web Development?? section done

--- a/index.html
+++ b/index.html
@@ -33,9 +33,51 @@
     </header>
     <!-- Header section end  -->
     <!-- Why Web Development section start  -->
-    <section class="why">
-      <div class="container">
-        <div></div>
+    <section class="why mt-80">
+      <div class="container why-wrap">
+        <div class="section-title">
+          <h2>Why Web Development??</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text.
+          </p>
+        </div>
+        <div class="why-content">
+          <div class="why-item">
+            <div class="flex-col">
+              <h4>I will Do Coding and Change The World</h4>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <a class="btn-learn" href="#">Learn More</a>
+            </div>
+            <img src="/assets/img/will-do.svg" alt="" />
+          </div>
+          <div class="why-item">
+            <img src="/assets/img/will-help.svg" alt="" />
+            <div class="flex-col">
+              <h4>I will help People by creating Modern Web System</h4>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <a href="#" class="btn-learn">Learn More</a>
+            </div>
+          </div>
+          <div class="why-content">
+            <div class="why-item">
+              <div class="flex-col">
+                <h4>I will Do Coding and Change The World</h4>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry.
+                </p>
+                <a class="btn-learn" href="#">Learn More</a>
+              </div>
+              <img src="/assets/img/do-code.svg" alt="" />
+            </div>
+        </div>
       </div>
     </section>
     <!-- Why Web Development section end   -->
