--- a/index.html
+++ b/index.html
@@ -81,5 +81,18 @@
       </div>
     </section>
     <!-- Why Web Development section end   -->
+    <!-- My Inspiration section start  -->
+    <section class="insp mt-80">
+        <div class="section-title">
+            <h2>My Inspiration</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="container">
+            <div class="video">
+                <iframe class="video-ctr" src="https://www.youtube.com/embed/-Fue--v_HxE?si=tr2xcMEsfGH1LhY2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <!-- My Inspiration section end  -->
   </body>
 </html>
