My Current Target

--- a/index.html
+++ b/index.html
@@ -94,5 +94,35 @@
         </div>
     </section>
     <!-- My Inspiration section end  -->
+    <!-- My Current Target section start  -->
+    <section class="cr-target">
+        <div class="container">
+            <div class="section-title">
+                <h2>My Current Target</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="flex">
+                <div class="item bg-html">
+                    <img src="/assets/img/html.svg" alt="">
+                    <h2>HTML</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="item bg-css">
+                    <img src="/assets/img/css.svg" alt="">
+                    <h2>CSS</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="item bg-js">
+                    <img src="/assets/img/js.svg" alt="">
+                    <h2>JavaScript</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- My Current Target section end  -->
   </body>
 </html>
