I need Support done

--- a/index.html
+++ b/index.html
@@ -163,5 +163,21 @@
         </div>
     </section>
     <!-- My Next Target section end  -->
+    <!-- I need Support section start  -->
+    <section class="support" id="support">
+        <div class="container support-bg">
+            <h4>I need Support</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div>
+                <form>
+                    <div class="flex">
+                        <input class="frm-ctr" type="text" placeholder="Suggest me any feedback for me">
+                        <button class="sub-btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- I need Support section end  -->
   </body>
 </html>
