Footer section done

--- a/index.html
+++ b/index.html
@@ -179,5 +179,25 @@
         </div>
     </section>
     <!-- I need Support section end  -->
+    <!-- Footer section start  -->
+    <footer class="footer mt-80">
+        <div class="container">
+            <div class="flex">
+                <p>An Open Commitment by Abdul Wahed Nur</p>
+                <div class="social">
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/fb.svg" alt="">
+                    </a>
+                    <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/git.svg" alt="">
+                    </a>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
+                        <img src="/assets/img/li.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer section end  -->
   </body>
 </html>
