--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Abdul Wahed Nur</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
       </nav>
       <section class="slider">
         <div class="content">
-          <img src="/assets/img/user.svg" alt="" />
+          <img src="./assets/img/user.svg" alt="" />
           <h1 class="title">
             "In the near future, I hope to become a Developer."
           </h1>
@@ -52,10 +52,10 @@
               </p>
               <a class="btn-learn" href="#">Learn More</a>
             </div>
-            <img src="/assets/img/will-do.svg" alt="" />
+            <img src="./assets/img/will-do.svg" alt="" />
           </div>
           <div class="why-item">
-            <img src="/assets/img/will-help.svg" alt="" />
+            <img src="./assets/img/will-help.svg" alt="" />
             <div class="flex-col">
               <h4>I will help People by creating Modern Web System</h4>
               <p>
@@ -75,7 +75,7 @@
                 </p>
                 <a class="btn-learn" href="#">Learn More</a>
               </div>
-              <img src="/assets/img/do-code.svg" alt="" />
+              <img src="./assets/img/do-code.svg" alt="" />
             </div>
         </div>
       </div>
@@ -103,19 +103,19 @@
             </div>
             <div class="flex">
                 <div class="item bg-html">
-                    <img src="/assets/img/html.svg" alt="">
+                    <img src="./assets/img/html.svg" alt="">
                     <h2>HTML</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div class="item bg-css">
-                    <img src="/assets/img/css.svg" alt="">
+                    <img src="./assets/img/css.svg" alt="">
                     <h2>CSS</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="#">Learn More</a>
                 </div>
                 <div class="item bg-js">
-                    <img src="/assets/img/js.svg" alt="">
+                    <img src="./assets/img/js.svg" alt="">
                     <h2>JavaScript</h2>
                     <p>Lorem Ipsum is simply dummy text of the printing.</p>
                     <a href="#">Learn More</a>
@@ -133,7 +133,7 @@
             </div>
             <div class="flex-col">
                 <div class="flex">
-                    <img src="/assets/img/react.svg" alt="">
+                    <img src="./assets/img/react.svg" alt="">
                     <div>
                         <h4>ReactJS</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -142,7 +142,7 @@
                     
                 </div>
                 <div class="flex">
-                    <img src="/assets/img/nodejs.svg" alt="">
+                    <img src="./assets/img/nodejs.svg" alt="">
                     <div>
                         <h4>NodeJs</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -151,7 +151,7 @@
                     
                 </div>
                 <div class="flex">
-                    <img src="/assets/img/mongodb.svg" alt="">
+                    <img src="./assets/img/mongodb.svg" alt="">
                     <div>
                         <h4>MongoDB</h4>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
