footer social icon link correction

--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
                 <p>An Open Commitment by Abdul Wahed Nur</p>
                 <div class="social">
                     <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/fb.svg" alt="">
+                        <img src="./assets/img/fb.svg" alt="">
                     </a>
                     <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/git.svg" alt="">
+                        <img src="./assets/img/git.svg" alt="">
                     </a>
                     <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="/assets/img/li.svg" alt="">
+                        <img src="./assets/img/li.svg" alt="">
                     </a>
                 </div>
             </div>
